--- a/index.html
+++ b/index.html
@@ -1,12 +1,274 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="page">
   <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" href="favicon.ico">
     <title>HTML Academy: Глейси</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+  <body class="page-body">
+    <header class="page-header">
+      <div class="container">
+        <nav class="page-header__nav">
+          <div class="page-header__wrap-list">
+            <a href="#" class="page-header__logo"><img src="img/logo.svg" alt="logo" class="page-header__img"></a>
+            <ul class="page-header__list menu-list">
+              <li class="menu-list__item menu-list__item--submenu"><a href="catalog.html" class="menu-list__link">Каталог</a>
+                <ul class="menu-list__list-menu">
+                  <li class="menu-list__item-menu"><a href="" class="menu-list__link-menu">Новинки</a></li>
+                  <li class="menu-list__item-menu"><a href="" class="menu-list__link-menu">Сливочное</a></li>
+                  <li class="menu-list__item-menu"><a href="" class="menu-list__link-menu">Щербеты</a></li>
+                  <li class="menu-list__item-menu"><a href="" class="menu-list__link-menu">Фруктовый лед</a></li>
+                  <li class="menu-list__item-menu"><a href="" class="menu-list__link-menu">Мелорин</a></li>
+                </ul>
+              </li>
+              <li class="menu-list__item"><a href="" class="menu-list__link">Доставка и оплата</a></li>
+              <li class="menu-list__item"><a href="" class="menu-list__link">О компании</a></li>
+            </ul>
+          </div>
+            <div class="page-header__user-wrap">
+              <ul class="page-header__user-list">
+                <li class="page-header__user-item">
+                  <a href="" class="page-header__user-link">Поиск</a>
+                </li>
+                <li class="page-header__user-item"><a href="" class="page-header__user-link">Вход</a></li>
+                <li class="page-header__user-item"><a href="" class="page-header__user-link">Корзина</a></li>
+              </ul>
+            </div>
+          <div class="page-header__info-wrap">
+            <p class="page-header__info-time">с 10 до 20, ежедневно</p>
+            <p class="page-header__info-contacts"><a href="tel:88124502525" class="page-header__info-phone">8 812 450-25-25</a></p>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <main class="page-main">
+      <h1 class="page-main__title visually-hidden">Интернет магазин мороженого"Глейси"</h1>
+      <section class="slider">
+        <div class="container">
+          <section class="slider__wrap">
+            <div class="slider__item slider__item--current">
+              <div class="slider__info">
+                <img src="img/strawberry-slider.png" alt="" class="slider__img">
+                <h2 class="slider__title">Пломбир с помадкой<br> и клубничный щербет</h2>
+                <a href="" class="slider__link button">Давайте оба!</a>
+              </div>
+            </div>
+            <div class="slider__item">
+              <div class="slider__info">
+                <img src="img/raspberry-slider.png" alt="" class="slider__img">
+                <h2 class="slider__title">Шоколадный пломбир<br> и лимонный сорбет</h2>
+                <a href="" class="slider__link button">Давайте оба!</a>
+              </div>
+            </div>
+            <div class="slider__item">
+              <div class="slider__info">
+                <img src="img/lemon-slider.png" alt="" class="slider__img">
+                <h2 class="slider__title">Крем-брюле и пломбир<br> с малиновым джемом</h2>
+                <a href="" class="slider__link button">Давайте оба!</a>
+              </div>
+            </div>
+            <div class="slider__controls">
+              <button class="slider__btn active" type="button" aria-label="Первый слайд"></button>
+              <button class="slider__btn" type="button" aria-label="Второй слайд"></button>
+              <button class="slider__btn" type="button" aria-label="Третий слайд"></button>
+            </div>
+          </section>
+        </div>
+      </section>
+      <section class="gift">
+        <div class="gift__wrap container">
+          <div class="gift__raspberry">
+            <h3 class="gift__title">Малинка даром!</h3>
+            <p class="gift__text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a href="" class="gift__link button">Хочу варенье!</a>
+          </div>
+          <div class="gift__choclate">
+            <h3 class="gift__title">Шоколадки даром!</h3>
+            <p class="gift__text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a href="" class="gift__link button gift__link--choco">Хочу шоколадки!</a>
+          </div>
+        </div>
+      </section>
+      <section class="goods">
+        <div class="container">
+          <div class="goods__wrap">
+            <ul class="goods__list">
+              <li class="goods__item">
+                <div class="goods__img-wrap">
+                  <img src="img/goods/orange.png" alt="" class="goods__img">
+                </div>
+                <dl class="goods__sheet">
+                  <dt class="goods__key">310 ₽</dt>
+                  <dd class="goods__value">/кг</dd>
+                </dl>
+                <p class="goods__text">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+                <a href="" class="goods__link button">Быстрый просмотр</a>
+              </li>
+              <li class="goods__item">
+                <div class="goods__img-wrap">
+                  <img src="img/goods/chokolate.png" alt="" class="goods__img">
+                </div>
+                <dl class="goods__sheet">
+                  <dt class="goods__key">380 ₽</dt>
+                  <dd class="goods__value">/кг</dd>
+                </dl>
+                <p class="goods__text">Сливочно-кофейное с кусочками шоколада</p>
+                <a href="" class="goods__link button">Быстрый просмотр</a>
+              </li>
+              <li class="goods__item">
+                <div class="goods__img-wrap">
+                  <img src="img/goods/strawberry.png" alt="" class="goods__img">
+                </div>
+                <dl class="goods__sheet">
+                  <dt class="goods__key">355 ₽</dt>
+                  <dd class="goods__value">/кг</dd>
+                </dl>
+                <p class="goods__text">Сливочно-клубничное с присыпкой из белого шоколада</p>
+                <a href="" class="goods__link button">Быстрый просмотр</a>
+              </li>
+              <li class="goods__item">
+                <div class="goods__img-wrap">
+                  <img src="img/goods/caramel.png" alt="" class="goods__img">
+                </div>
+                <dl class="goods__sheet">
+                  <dt class="goods__key">415 ₽</dt>
+                  <dd class="goods__value">/кг</dd>
+                </dl>
+                <p class="goods__text">Сливочное крем-брюле с карамельной подливкой </p>
+                <a href="" class="goods__link button">Быстрый просмотр</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="advantages">
+        <div class="container">
+          <div class="advantages__wrap">
+            <h3 class="advantages__title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+            <ul class="advantages__list">
+              <li class="advantages__item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+              <li class="advantages__item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+              <li class="advantages__item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+              <li class="advantages__item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="other">
+        <div class="container">
+          <div class="other__wrap">
+            <div class="other__variant">
+              <h3 class="other__title">Новое в нашем блоге</h3>
+              <a href="blank.html" class="other__link">10 способов сервировки<br> фруктовых щербетов<br> к столу</a>
+            </div>
+            <div class="other__mail-wrap">
+              <div class="other__mail">
+                <p class="other__text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+                <form class="other__form" action="https://echo.htmlacademy.ru" method="post">
+                  <div class="other__input-wrap">
+                    <p class="other__mail-item">
+                      <label class="other__mail-login" for="email-login"></label>
+                      <input class="other__input" id="email-login" type="email" name="login" placeholder="email@example.com">
+                    </p>
+                    <p><button class="other__button button" type="submit">Отправить</button></p>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="map">
+        <img src="img/map.jpg" alt="Карта" class="map__img">
+        <div class="container">
+            <div class="map__adress">
+              <h3 class="map__title">Адрес главного офиса и офлайн-магазина:</h3>
+              <p class="map__subtitle">наб. Реки Карповки, 5 лит П, Санкт-Петербург</p>
+              <p class="map__text">Для заказов по телефону:</p>
+              <p class="map__contacts"><a href="tel:78005558628" class="map__phone">+7 800 555-86-28</a></p>
+              <p class="map__text">(с 10 до 20 ежедневно)</p>
+              <a href="#" class="map__link button">Форма обратной связи</a>
+            </div>
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="page-footer__wrap">
+          <div class="page-footer__social-wrap">
+            <ul class="page-footer__social-list">
+              <li class="page-footer__social-item">
+                <a href="" class="page-footer__social-link">
+                  <svg class="page-footer__social-icon" fill="currentColor" width="32" height="32">
+                    <use xlink:href="img/goods/sprite.svg#fb-icon"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="page-footer__social-item">
+                <a href="" class="page-footer__social-link">
+                  <svg class="page-footer__social-icon" fill="currentColor" width="32" height="32">
+                    <use xlink:href="img/goods/sprite.svg#vk-icon"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="page-footer__social-item">
+                <a href="" class="page-footer__social-link">
+                  <svg class="page-footer__social-icon" fill="currentColor" width="32" height="32">
+                    <use xlink:href="img/goods/sprite.svg#inst-icon"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="page-footer__social-item">
+                <a href="" class="page-footer__social-link">
+                  <svg class="page-footer__social-icon" fill="currentColor" width="32" height="32">
+                    <use xlink:href="img/goods/sprite.svg#tw-icon"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__info-wrap">
+            <ul class="page-footer__info-list">
+              <li class="page-footer__info-item"><a href="" class="page-footer__info-link">Для поставщиков</a></li>
+              <li class="page-footer__info-item"><a href="" class="page-footer__info-link">Наши документы</a></li>
+              <li class="page-footer__info-item"><a href="" class="page-footer__info-link">О производстве</a></li>
+              <li class="page-footer__info-item"><a href="" class="page-footer__info-link">Экологические стандарты</a></li>
+            </ul>
+          </div>
+          <div class="page-footer__copyright-wrap">
+            <a href="" class="page-footer__copyright-link">
+              <svg class="page-footer__copyright-logo" fill="currentColor" width="108" height="32">
+                <use xlink:href="img/goods/sprite.svg#html-icon"></use>
+              </svg>
+            </a>
+            <p class="page-footer__copyright-text">Сделано в <a href="" class="page-footer__copyright-link-name">HTML Academy</a> © 2021</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <section class="page-body__pop-up pop-up">
+      <header class="pop-up__header">
+        <h3 class="pop-up__title"></h3>
+        <button class="pop-up__button" type="button">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+      </header>
+      <form action="https://echo.htmlacademy.ru" class="pop-up-form">
+        <p class="pop-up__mail-item">
+          <label for="meeting-name" class="pop-up__text"></label>
+          <input id="meeting-name" type="text" name="name" placeholder="Имя Фамилия">
+        </p>
+        <p class="pop-up__mail-item">
+          <label for="email-login" class="pop-up__text"></label>
+          <input id="email-login" type="email" name="login" placeholder="email@example.com">
+        </p>
+        <p class="pop-up__mail-item">
+          <label for="free-text" class="pop-up__text"></label>
+          <textarea rows="5" cols="45" name="text" id="free-text" placeholder="В свободной форме"></textarea>
+        </p>
+        <p><button class="pop-up__button button" type="submit">Отправить</button></p>
+      </form>
+    </section>
   </body>
 </html>
