Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <div class="page-header__user-wrap">
               <ul class="page-header__user-list">
                 <li class="page-header__user-item">
-                  <a href="" class="page-header__user-link">Поиск</a>
+                  <form action="" method="post" class="search">
+                    <input type="search" name="" placeholder="поиск" class="page-header__input">
+                  </form>
                 </li>
                 <li class="page-header__user-item"><a href="" class="page-header__user-link">Вход</a></li>
                 <li class="page-header__user-item"><a href="" class="page-header__user-link">Корзина</a></li>
@@ -69,7 +71,7 @@
               </div>
             </div>
             <div class="slider__controls">
-              <button class="slider__btn active" type="button" aria-label="Первый слайд"></button>
+              <button class="slider__btn slider__btn--active" type="button" aria-label="Первый слайд"></button>
               <button class="slider__btn" type="button" aria-label="Второй слайд"></button>
               <button class="slider__btn" type="button" aria-label="Третий слайд"></button>
             </div>
