--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
           <div class="page-header__wrap-list">
             <a href="index.html" class="page-header__logo"><img src="img/logo.svg" alt="logo" class="page-header__img"></a>
             <ul class="page-header__list menu-list">
-              <li class="menu-list__item"><a class="menu-list__link">Каталог</a>
+              <li class="menu-list__item menu-list__item--submenu"><a class="menu-list__link">Каталог</a>
                 <ul class="menu-list__list-menu">
                   <li class="menu-list__item-menu"><a href="" class="menu-list__link-menu">Новинки</a></li>
                   <li class="menu-list__item-menu"><a href="" class="menu-list__link-menu">Сливочное</a></li>
@@ -28,7 +28,11 @@
           </div>
             <div class="page-header__user-wrap">
               <ul class="page-header__user-list">
-                <li class="page-header__user-item"><a href="" class="page-header__user-link">Поиск</a></li>
+                <li class="page-header__user-item">
+                  <form action="" method="post" class="search">
+                    <input type="search" name="" placeholder="поиск" class="page-header__input">
+                  </form>
+                </li>
                 <li class="page-header__user-item"><a href="" class="page-header__user-link">Вход</a></li>
                 <li class="page-header__user-item"><a href="" class="page-header__user-link">Корзина</a></li>
               </ul>
@@ -52,7 +56,7 @@
           <form class="filter__form" method="get" action="https://echo.htmlacademy.ru">
             <div class="filter__sorting-wrap">
               <p class="filter__sorting-text title-name">Сортировка :</p>
-              <select name="" id="" size="1">
+              <select class="filter-_select" name="" id="" size="1">
                 <option value="">По популярности</option>
                 <option value="">Сначала недорогие</option>
                 <option value="">Сначала дорогие</option>
