--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="container">
           <div class="goods__wrap">
             <ul class="goods__list">
-              <li class="goods__item">
+              <li class="goods__item" tabindex="0">
                 <div class="goods__img-wrap">
                   <img src="img/goods/orange.png" alt="" class="goods__img">
                 </div>
@@ -107,7 +107,7 @@
                 <p class="goods__text">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
                 <a href="" class="goods__link button">Быстрый просмотр</a>
               </li>
-              <li class="goods__item">
+              <li class="goods__item" tabindex="0">
                 <div class="goods__img-wrap">
                   <img src="img/goods/chokolate.png" alt="" class="goods__img">
                 </div>
@@ -118,7 +118,7 @@
                 <p class="goods__text">Сливочно-кофейное с кусочками шоколада</p>
                 <a href="" class="goods__link button">Быстрый просмотр</a>
               </li>
-              <li class="goods__item">
+              <li class="goods__item" tabindex="0">
                 <div class="goods__img-wrap">
                   <img src="img/goods/strawberry.png" alt="" class="goods__img">
                 </div>
@@ -129,7 +129,7 @@
                 <p class="goods__text">Сливочно-клубничное с присыпкой из белого шоколада</p>
                 <a href="" class="goods__link button">Быстрый просмотр</a>
               </li>
-              <li class="goods__item">
+              <li class="goods__item" tabindex="0">
                 <div class="goods__img-wrap">
                   <img src="img/goods/caramel.png" alt="" class="goods__img">
                 </div>
